--- a/css/style.css
+++ b/css/style.css
@@ -356,9 +356,9 @@ h5,
 .form-control {
     height: 55px;
     background-color: #fff !important;
-    font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-        'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
-        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 .form-control:active,
 .form-control:focus {
@@ -464,7 +464,7 @@ h5,
 }
 .bg-image.overlay:after {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     right: 0;
@@ -534,8 +534,8 @@ h5,
     left: 0;
     font-size: 20px;
     top: -0.3rem;
-    font-family: 'icomoon';
-    content: '\e5ca';
+    font-family: "icomoon";
+    content: "\e5ca";
     position: absolute;
 }
 .ul-check.white li:before {
@@ -653,14 +653,14 @@ h5,
 }
 .site-navbar .site-navigation .site-menu .has-children > a:before {
     position: absolute;
-    content: '\e313';
+    content: "\e313";
     font-size: 16px;
     top: 50%;
     right: 0;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
-    font-family: 'icomoon';
+    font-family: "icomoon";
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown {
     visibility: hidden;
@@ -691,7 +691,7 @@ h5,
     bottom: 100%;
     left: 20%;
     border: solid transparent;
-    content: ' ';
+    content: " ";
     height: 0;
     width: 0;
     position: absolute;
@@ -746,7 +746,7 @@ h5,
     .dropdown
     > li.has-children
     > a:before {
-    content: '\e315';
+    content: "\e315";
     right: 20px;
 }
 .site-navbar
@@ -922,8 +922,8 @@ h5,
 .site-mobile-menu .site-nav-wrap .arrow-collapse:before {
     font-size: 12px;
     z-index: 20;
-    font-family: 'icomoon';
-    content: '\f078';
+    font-family: "icomoon";
+    content: "\f078";
     position: absolute;
     top: 50%;
     left: 50%;
@@ -972,16 +972,16 @@ h5,
     font-size: 16px;
     padding-left: 60px;
 }
-.site-mobile-menu .site-nav-wrap[data-class='social'] {
+.site-mobile-menu .site-nav-wrap[data-class="social"] {
     float: left;
     width: 100%;
     margin-top: 30px;
     padding-bottom: 5em;
 }
-.site-mobile-menu .site-nav-wrap[data-class='social'] > li {
+.site-mobile-menu .site-nav-wrap[data-class="social"] > li {
     width: auto;
 }
-.site-mobile-menu .site-nav-wrap[data-class='social'] > li:first-child a {
+.site-mobile-menu .site-nav-wrap[data-class="social"] > li:first-child a {
     padding-left: 15px !important;
 }
 
@@ -1060,7 +1060,7 @@ h5,
 }
 .site-section-cover.overlay:before {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     right: 0;
@@ -1127,7 +1127,7 @@ h5,
     margin-right: -18px;
 }
 .block-feature-1-wrap > .container > .row > .col,
-.block-feature-1-wrap > .container > .row > [class*='col-'] {
+.block-feature-1-wrap > .container > .row > [class*="col-"] {
     padding-right: 36px;
     padding-left: 36px;
 }
@@ -1234,7 +1234,7 @@ h5,
 }
 .block-counter-1 .number:after {
     position: absolute;
-    content: '';
+    content: "";
     width: 50px;
     height: 3px;
     left: 50%;
@@ -1290,7 +1290,7 @@ h5,
     font-style: italic;
     font-size: 18px;
     color: #000;
-    font-family: 'Georgia', Times, serif;
+    font-family: "Georgia", Times, serif;
     position: relative;
 }
 .block-testimony-1 figure {
@@ -1299,7 +1299,7 @@ h5,
 }
 .block-testimony-1 figure:before {
     position: absolute;
-    content: '';
+    content: "";
     width: 50px;
     left: 50%;
     display: none;
@@ -1634,7 +1634,7 @@ h5,
     position: relative;
 }
 .ftco-cover-1.overlay:before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -1816,8 +1816,8 @@ h5,
     top: 1rem;
     font-size: 2rem;
     color: #71bc42;
-    font-family: 'icomoon';
-    content: '\e86c';
+    font-family: "icomoon";
+    content: "\e86c";
 }
 .feature-3 h3 {
     font-size: 1.3rem;
@@ -1880,7 +1880,7 @@ h5,
     background: #fff;
 }
 .feature-car-rent-box-1:before {
-    content: '';
+    content: "";
     position: absolute;
     top: 0;
     left: 0;
@@ -1951,7 +1951,7 @@ h5,
 .how-it-works .step:after {
     width: 100%;
     height: 4px;
-    content: '';
+    content: "";
     position: absolute;
     z-index: -1;
     top: 25px;
@@ -2051,7 +2051,7 @@ h5,
     left: 0;
     right: 0;
     bottom: 0;
-    content: '';
+    content: "";
     background-color: rgba(0, 0, 0, 0.5);
 }
 
@@ -2340,7 +2340,7 @@ h5,
 }
 
 .cookie-wrapper * {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 .cookie-wrapper .show {
@@ -2364,12 +2364,12 @@ h5,
     display: none;
 }
 header i {
-    color: #007bff;
+    color: #fddb27ff;
     font-size: 32px;
     text-align: center;
 }
 header h2 {
-    color: #007bff;
+    color: #fddb27ff;
     font-weight: 500;
     text-align: center;
 }
@@ -2377,7 +2377,7 @@ header h2 {
     text-align: center;
 }
 .data p a {
-    color: #007bff;
+    color: #fddb27ff;
     text-decoration: none;
     text-align: center !important;
 }
@@ -2389,10 +2389,10 @@ header h2 {
     text-align: center;
 }
 .buttons .cookie-button {
-    border: 2px solid #007bff;
+    border: 2px solid #fddb27ff;
     color: #fff;
     padding: 8px 0;
-    background: #007bff;
+    background: #fddb27ff;
     cursor: pointer;
     width: calc(100% / 2 - 10px);
     transition: all 0.5s ease;
@@ -2401,14 +2401,14 @@ header h2 {
 }
 .buttons #acceptBtn:hover {
     background-color: transparent;
-    color: #007bff;
+    color: #fddb27ff;
 }
 #declineBtn {
     background-color: #fff;
-    color: #007bff;
+    color: #fddb27ff;
 }
 #declineBtn:hover {
-    background-color: #007bff;
+    background-color: #fddb27ff;
     color: #fff;
 }
 /* Footer Style */
