--- a/css/thanks.css
+++ b/css/thanks.css
@@ -22,10 +22,10 @@ body {
     text-align: center;
 }
 h1 {
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 3em !important;
     letter-spacing: 3px;
-    color: #007bff;
+    color: #fddb27ff;
     margin: 0;
     margin-bottom: 20px;
     line-height: 70px;
@@ -34,11 +34,11 @@ h1 {
     margin: 0;
     font-size: 1.3em;
     color: #aaa;
-    font-family: 'Raleway', sans-serif;
+    font-family: "Raleway", sans-serif;
     letter-spacing: 1px;
 }
 .go-home {
-    background: #007bff;
+    background: #fddb27ff;
     border: 2px solid #ffffff;
     color: #ffffff;
     font-weight: 600;
@@ -59,10 +59,10 @@ h1 {
 }
 .go-home:hover {
     background: transparent;
-    border-color: #007bff;
+    border-color: #fddb27ff;
 }
 a:hover .go-home {
-    color: #007bff;
+    color: #fddb27ff;
 }
 .go-home a {
     text-decoration: none;
@@ -79,7 +79,7 @@ a:hover .go-home {
     margin: 0;
     padding: 4px;
     color: #ffc107;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: "Source Sans Pro", sans-serif;
     letter-spacing: 1px;
 }
 .footer-like p a {
